# notesX

./: .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.cursor/plans/: rss_hot与摘要分析_ea72a82b.plan.md
.github/workflows/: docker-build-in-ACR.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  dev.py  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/routes/: health.py  rss.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: pool.py
apps/api/app/schemas/: rss.py
apps/api/app/services/: hot_rank.py  rss_service.py  scheduler.py  summary_service.py
apps/api/knowledge_rss_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_hot_rank.py
apps/web/: .env.example  astro.config.mjs  package.json  wrangler.toml
apps/web/scripts/: sync-obsidian.ts
apps/web/src/: content.config.ts
apps/web/src/components/auth/: AuthConfirm.svelte  (+1 more)
apps/web/src/layouts/: BaseLayout.astro
apps/web/src/lib/: api-url.ts  api.ts  notes.ts  remark-obsidian-links.mjs  site.ts  supabase.ts
apps/web/src/pages/: index.astro  rss.astro
apps/web/src/styles/: global.css
deploy/: Caddyfile
docs/: api-https-cutover.md  architecture.md  deployment-runbook.md
supabase/: config.toml  seed.sql
supabase/functions/rss-summary-ready/: index.ts
supabase/migrations/: 20260404170000_initial_schema.sql  20260408153000_summary_recovery_index.sql  20260412103000_rss_retention_auth_favorites.sql  20260421110000_rss_catalog_and_ai_tags.sql
supabase/seeds/: rss_sources.sql  rss_test_sources.sql
(+40 files in other folders)
